--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,7 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:fitsSystemWindows="true"
-tools:context="info.androidhive.firebase.LoginActivity">
+tools:context="com.example.ecare_client.registration.SignupActivity">
 
 <LinearLayout
     android:layout_width="fill_parent"
