basic checklist feature, bottom left button

--- a/app/src/main/res/layout/main_page.xml
+++ b/app/src/main/res/layout/main_page.xml
@@ -34,6 +34,7 @@
             />
 
         <com.example.ecare_client.mainpageview.SexangleImageView
+            android:id="@+id/btnOpenChecklist"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:background="@drawable/center_email"
