--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -7,11 +7,25 @@
     android:layout_height="match_parent"
     android:orientation="vertical"  >
 
-    <EditText
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/etOrigin"
-        android:hint="Enter origin address" />
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/etOrigin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="Enter origin address" />
+
+        <Button
+            android:id="@+id/useCurrent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Use current location" />
+    </LinearLayout>
 
     <EditText
         android:layout_width="match_parent"
