--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -7,9 +7,16 @@
     android:paddingBottom="0dp"
     android:paddingTop="0dp">
 
+    <CheckBox
+        android:id="@+id/delete_checkbox"
+        android:layout_width="6dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:checked="false" />
+
     <TextView
         android:id="@+id/contact_name"
-        android:layout_width="0dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
 
