--- a/app/src/main/res/layout/chat_page.xml
+++ b/app/src/main/res/layout/chat_page.xml
@@ -5,6 +5,11 @@
     android:layout_height="match_parent"
     android:background="#d8e0e8">
 
+    <com.example.ecare_client.TitleLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/chat_title"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/msg_recycler_view"
         android:layout_width="match_parent"
