--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.ecare_client.alarmclock.MainActivity">
+    tools:context="com.example.ecare_client.alarmclock.AlarmClockActivity">
 
     <TextView
         android:id="@+id/date_tv"
