--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,12 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="logo_w_h">100dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+
+    <dimen name="button_size_primary">100dp</dimen>
+    <dimen name="button_size_secondary">85dp</dimen>
+    <dimen name="button_size_third">50dp</dimen>
+    <dimen name="button_padding_primary">8dp</dimen>
+    <dimen name="button_padding_secondary">8dp</dimen>
+
+
 </resources>
