--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,4 +28,11 @@
     <color name="half_transparent_black">#BB000000</color>
     <color name="light_black">#141414</color>
     <color name="line_and_outline_grey">#d9d9d9</color>
+
+    <color name="black_overlay">#66000000</color>
+    <color name="button_background">#000000FF</color>
+    <color name="button_color_yellow">#fece0e</color>
+    <color name="button_color_red">#ff1300</color>
+    <color name="button_color_blue">#0092cc</color>
+
 </resources>
