--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -20,12 +20,11 @@
         android:layout_height="wrap_content"
         android:layout_weight="1" />
 
-    <Button
-        android:id="@+id/message_button"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/online_status"
+        android:layout_width="69dp"
         android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:textSize="12sp" />
+        android:layout_weight="1" />
+
 </LinearLayout>
 
