--- a/app/src/main/res/layout/activity_contact_list.xml
+++ b/app/src/main/res/layout/activity_contact_list.xml
@@ -12,25 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout"
+    <EditText
+        android:id="@+id/contact_email"
         android:layout_width="match_parent"
-        android:layout_height="53dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/divider"
-        app:layout_constraintEnd_toStartOf="@+id/add_contact_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contact_list_heading">
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/contact_email"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/contact_hint" />
-    </android.support.design.widget.TextInputLayout>
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/contact_hint"
+        android:inputType="textEmailAddress" />
 
     <LinearLayout
         android:layout_width="match_parent"
