--- a/app/src/main/res/layout/activity_contact_profile.xml
+++ b/app/src/main/res/layout/activity_contact_profile.xml
@@ -27,21 +27,35 @@
         android:layout_height="wrap_content"
         android:text="@string/update_nickname" />
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="19dp" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="@string/contact_profile_email"
+        android:textAlignment="center"
+        android:textSize="14sp" />
+
     <TextView
         android:id="@+id/contact_email"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
+        android:layout_weight="1"
         android:text="TextView"
         android:textAlignment="center"
         android:textSize="24sp" />
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="110dp" />
+        android:layout_height="39dp" />
 
     <Button
         android:id="@+id/message_button"
         android:layout_width="match_parent"
-        android:layout_height="62dp"
+        android:layout_height="73dp"
         android:textSize="24sp" />
 </LinearLayout>
