--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -2,29 +2,33 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="44dp"
     android:orientation="horizontal"
     android:paddingBottom="0dp"
     android:paddingTop="0dp">
 
     <CheckBox
         android:id="@+id/delete_checkbox"
-        android:layout_width="6dp"
-        android:layout_height="wrap_content"
+        android:layout_width="18dp"
+        android:layout_height="44dp"
         android:layout_weight="1"
         android:checked="false" />
+
 
     <TextView
         android:id="@+id/contact_name"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_height="44dp"
+        android:layout_weight="1"
+        android:textSize="18sp" />
+
 
     <TextView
         android:id="@+id/online_status"
         android:layout_width="69dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_height="44dp"
+        android:layout_weight="1"
+        android:textSize="18sp" />
 
 </LinearLayout>
 
