--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.ecare_client.registration.SignupActivity"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:fitsSystemWindows="true"
-tools:context="com.example.ecare_client.registration.SignupActivity">
 
-<LinearLayout
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@color/colorPrimaryDark"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:padding="@dimen/activity_horizontal_margin">
+android:background="@color/colorPrimaryDark"
+android:gravity="center"
+android:orientation="vertical"
+android:padding="@dimen/activity_horizontal_margin">
 
 
     <ImageView
@@ -69,17 +66,8 @@ tools:context="com.example.ecare_client.registration.SignupActivity">
         android:textColor="@android:color/black"
         android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/btn_reset_password"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dip"
-        android:background="@null"
-        android:text="@string/btn_forgot_password"
-        android:textAllCaps="false"
-        android:textColor="@color/colorAccent" />
-
     <!-- Link to Login Screen -->
+
 
     <Button
         android:id="@+id/sign_in_button"
@@ -91,13 +79,13 @@ tools:context="com.example.ecare_client.registration.SignupActivity">
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="15dp" />
-</LinearLayout>
 
-<ProgressBar
-    android:id="@+id/progressBar"
-    android:layout_width="30dp"
-    android:layout_height="30dp"
-    android:layout_gravity="center|bottom"
-    android:layout_marginBottom="20dp"
-    android:visibility="gone" />
-</android.support.design.widget.CoordinatorLayout>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="30dp"
+        android:visibility="invisible" />
+
+</LinearLayout>
