--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -80,6 +80,80 @@ android:padding="@dimen/activity_horizontal_margin">
         android:textColor="@color/white"
         android:textSize="15dp" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:id="@+id/google_sign_in_btn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/imageButton3"
+                android:layout_width="16dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/white"
+                app:srcCompat="@drawable/fui_ic_googleg_color_24dp" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:lineSpacingExtra="0sp"
+                android:text="TextView"
+                android:textAlignment="center"
+                android:textColor="@color/black_33"
+                android:textSize="15sp"
+                tools:text="@string/google_sign_in" />
+        </LinearLayout>
+
+        <Space
+            android:layout_width="186dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <LinearLayout
+            android:id="@+id/facebook_sign_in_btn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/imageButton4"
+                android:layout_width="16dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/white"
+                app:srcCompat="@drawable/fui_ic_facebook_white_22dp" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:lineSpacingExtra="0sp"
+                android:text="TextView"
+                android:textAlignment="center"
+                android:textColor="@color/black_33"
+                android:textSize="15sp"
+                tools:text="@string/facebook_sign_in" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="29dp" />
+
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="30dp"
