--- a/app/src/main/res/layout/activity_contact_profile.xml
+++ b/app/src/main/res/layout/activity_contact_profile.xml
@@ -9,6 +9,7 @@
         android:id="@+id/contact_picture"
         android:layout_width="match_parent"
         android:layout_height="240dp"
+        android:scaleType="center"
         app:srcCompat="@drawable/center_pic" />
 
     <EditText
