--- a/app/src/main/res/layout/activity_contact_profile.xml
+++ b/app/src/main/res/layout/activity_contact_profile.xml
@@ -5,12 +5,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/contact_picture"
         android:layout_width="match_parent"
-        android:layout_height="240dp"
-        android:scaleType="center"
-        app:srcCompat="@drawable/center_pic" />
+        android:layout_height="202dp"
+        android:src="@drawable/blank_pic"
+        app:civ_border_color="#FF000000"
+        app:civ_border_width="2dp" />
 
     <EditText
         android:id="@+id/contact_nickname"
@@ -35,7 +36,7 @@
     <TextView
         android:id="@+id/textView7"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="4dp"
         android:layout_weight="1"
         android:text="@string/contact_profile_email"
         android:textAlignment="center"
