--- a/app/src/main/res/layout/form.xml
+++ b/app/src/main/res/layout/form.xml
@@ -62,6 +62,24 @@
 
         </android.support.design.widget.TextInputLayout>
 
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/inputCarer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Your Primary Carer" />
+        </android.support.design.widget.TextInputLayout>
+
+        <CheckBox
+            android:id="@+id/carerCheckBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="I am using this app as a carer"
+            />
+
         <Button
             android:id="@+id/btn_save"
             style="@style/ButtonBar"
