--- a/app/src/main/res/layout/activity_contact_profile.xml
+++ b/app/src/main/res/layout/activity_contact_profile.xml
@@ -5,13 +5,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+    <com.subinkrishna.widget.CircularImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/contact_picture"
         android:layout_width="match_parent"
         android:layout_height="202dp"
-        android:src="@drawable/blank_pic"
-        app:civ_border_color="#FF000000"
-        app:civ_border_width="2dp" />
+        android:src="@drawable/blank_pic" />
 
     <EditText
         android:id="@+id/contact_nickname"
