--- a/app/src/main/res/layout/activity_contact_profile.xml
+++ b/app/src/main/res/layout/activity_contact_profile.xml
@@ -39,12 +39,12 @@
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="19dp" />
+        android:layout_height="32dp" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="match_parent"
-        android:layout_height="4dp"
+        android:layout_height="3dp"
         android:layout_weight="1"
         android:text="@string/contact_profile_email"
         android:textAlignment="center"
@@ -53,15 +53,22 @@
     <TextView
         android:id="@+id/contact_email"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="66dp"
         android:layout_weight="1"
         android:text="TextView"
         android:textAlignment="center"
         android:textSize="24sp" />
 
+    <TextView
+        android:id="@+id/is_carer_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="18sp" />
+
     <Space
         android:layout_width="match_parent"
-        android:layout_height="39dp" />
+        android:layout_height="92dp" />
 
     <Button
         android:id="@+id/message_button"
