--- a/app/src/main/res/layout/callscreen.xml
+++ b/app/src/main/res/layout/callscreen.xml
@@ -78,9 +78,10 @@
 
         <Button
             android:id="@+id/hangupButton"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:background="#d24949"
             android:paddingBottom="20dp"
             android:paddingTop="20dp"
             android:text="END call"
