--- a/app/src/main/res/layout/magnifier.xml
+++ b/app/src/main/res/layout/magnifier.xml
@@ -26,11 +26,11 @@
         android:id="@+id/button_flash"
         android:layout_width="@dimen/button_size_secondary"
         android:layout_height="@dimen/button_size_secondary"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_gravity="right|bottom"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="37dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginTop="71dp"
         android:background="@drawable/button_flash_round_corners"
         android:contentDescription="@string/button_flash_description"
         android:elevation="8dp"
