--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/left_layout"
         android:layout_gravity="left"
-        android:background="@drawable/message_left">
+        android:background="@drawable/message_right"
+        android:scaleX="-1">
 
         <TextView
             android:layout_width="wrap_content"
@@ -26,7 +27,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/right_layout"
         android:layout_gravity="right"
-        android:background="@drawable/message_right">
+        android:background="@drawable/message_left"
+        android:scaleX="-1">
 
         <TextView
             android:layout_width="wrap_content"
