--- a/app/src/main/res/layout/chat_page.xml
+++ b/app/src/main/res/layout/chat_page.xml
@@ -65,8 +65,8 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="9dp"
             android:layout_toRightOf="@id/input_text"
+            android:background="#68b077"
             android:text="Send" />
-
 
 
         <Button
@@ -76,8 +76,9 @@
             android:layout_alignBaseline="@+id/input_text"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="27dp"
-            android:text="More"
-            android:contentDescription="more"/>
+            android:background="#f3da75"
+            android:contentDescription="more"
+            android:text="More" />
 
 
     </RelativeLayout>
