--- a/app/src/main/res/layout/form.xml
+++ b/app/src/main/res/layout/form.xml
@@ -22,7 +22,7 @@
             android:layout_width="395dp"
             android:layout_height="96dp"
             android:src="@drawable/blank_pic"
-            app:ci_borderColor="@android:color/darker_gray"
+            app:ci_borderColor="#a1a5c0"
             app:ci_borderWidth="2dp"
             app:ci_placeholderBackgroundColor="@android:color/black"
             app:ci_placeholderText="DP"
@@ -31,12 +31,13 @@
             app:ci_shadowColor="#999999"
             app:ci_shadowRadius="5.0" />
 
+
         <Button
             android:id="@+id/btnChoose"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:text="Choose" />
+            android:text="Choose Photo" />
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -70,7 +71,18 @@
                 android:id="@+id/inputCarer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Your Primary Carer" />
+                android:hint="Primary Carer Name" />
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/inputCarerPhone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Primary Carer Phone No." />
+            </android.support.design.widget.TextInputLayout>
         </android.support.design.widget.TextInputLayout>
 
         <CheckBox
