--- a/app/src/main/res/layout/main_page_layout.xml
+++ b/app/src/main/res/layout/main_page_layout.xml
@@ -10,11 +10,11 @@
     android:background="@drawable/background">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/temp_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView2"
-        android:layout_below="@+id/textView2"
+        android:layout_alignStart="@+id/date_text"
+        android:layout_below="@+id/date_text"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="110sp" />
 
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/textView2"
+        android:id="@+id/date_text"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
@@ -30,36 +30,36 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/textView3"
+        android:id="@+id/city_text"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="73dp" />
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="20dp" />
 
     <TextView
+        android:id="@+id/descrip_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/temp_text"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/textView4"
-        android:textSize="20sp"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentStart="true" />
+        android:textSize="20sp" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="C"
         android:id="@+id/textView5"
-        android:layout_alignTop="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/textView" />
+        android:layout_alignTop="@+id/temp_text"
+        android:layout_toEndOf="@+id/temp_text"
+        android:text="  C"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/weather_imageView"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/textView3"
+        android:layout_alignStart="@+id/city_text"
         android:layout_marginTop="71dp"
         android:src="@drawable/icon_clearsky" />
 
