--- a/app/src/main/res/layout/tool_list.xml
+++ b/app/src/main/res/layout/tool_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="#4b5bb5"
     android:padding="2dp">
 
     <com.example.ecare_client.TitleLayout
@@ -16,45 +16,24 @@
 
     <ImageView
         android:id="@+id/btnPersonalInfo"
-        android:layout_width="145dp"
-        android:layout_height="145dp"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/btnSettings"
-        android:layout_marginStart="35dp"
-        android:background="@color/btn_login_bg"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="90dp"
+        android:background="@color/colorPrimaryDark"
         app:srcCompat="@drawable/personal_info" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="184dp"
-        android:layout_height="41dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="192dp"
-        android:fontFamily="@font/baloo"
-        android:text="   Personal Information"
-        android:textColor="@color/btn_login" />
-
-    <ImageView
-        android:id="@+id/btnSettings"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="96dp"
-        android:layout_toEndOf="@+id/textView2"
-        android:background="@color/btn_login_bg"
-        app:srcCompat="@drawable/settings" />
-
-    <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/date_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/textView2"
-        android:layout_marginEnd="66dp"
+        android:layout_alignBottom="@+id/btnPersonalInfo"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="59dp"
         android:fontFamily="@font/baloo"
-        android:text="Settings"
+        android:text="User Settings"
         android:textColor="@color/btn_login" />
 
     <ImageView
@@ -64,7 +43,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/btnPersonalInfo"
         android:layout_marginBottom="159dp"
-        android:background="@color/btn_login_bg"
+        android:background="@color/colorPrimaryDark"
         app:srcCompat="@drawable/todo_list" />
 
 
@@ -72,40 +51,50 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_alignBottom="@+id/btnOpenChecklist"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="187dp"
-        android:layout_marginStart="73dp"
+        android:layout_marginStart="77dp"
         android:fontFamily="@font/baloo"
         android:text="To-Do List"
         android:textColor="@color/btn_login" />
 
     <ImageView
         android:id="@+id/btnOpenAlarmClock"
-        android:layout_width="145dp"
-        android:layout_height="145dp"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:layout_alignBottom="@+id/btnOpenChecklist"
-        android:layout_alignEnd="@+id/btnSettings"
-        android:layout_alignTop="@+id/btnOpenChecklist"
-        android:layout_toEndOf="@+id/textView2"
-        app:srcCompat="@drawable/alarm" />
+        android:layout_alignRight="@id/btnOpenMagnifier"
+        android:background="@color/colorPrimaryDark"
+        app:srcCompat="@drawable/alarm_clock" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/btnOpenChecklist"
+        android:layout_alignEnd="@+id/textView6"
+        android:fontFamily="@font/baloo"
+        android:text="Alarm Clock"
+        android:textColor="@color/btn_login" />
 
     <ImageView
         android:id="@+id/btnOpenMagnifier"
         android:layout_width="140dp"
         android:layout_height="140dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/btnOpenChecklist"
-        android:background="@color/btn_login_bg"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/btnPersonalInfo"
+        android:layout_marginEnd="30dp"
+        android:background="@color/colorPrimaryDark"
         app:srcCompat="@drawable/magnifier" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/textView4"
-        android:layout_marginBottom="39dp"
+        android:layout_alignBottom="@+id/btnPersonalInfo"
+
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="70dp"
         android:fontFamily="@font/baloo"
         android:text="Magnifier"
         android:textColor="@color/btn_login" />
